--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,3 @@
-/*!*******************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[3]!./assets/stylesheets/styles.scss ***!
-  \*******************************************************************************************************************************************************************************************************************************************************/
-/*$midnight-blue: #2c3e50;*/
-body {
-  background-color: #024c78;
-  color: yellow;
-}
+body{background-color:#024c78;color:#ff0}
 
 /*# sourceMappingURL=styles.css.map*/
